--- a/style.css
+++ b/style.css
@@ -178,7 +178,7 @@ a{
     background: url(/assets/Home12.png);
     background-position: center;
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: 100% 100%;
     display: grid;
     place-content: center;
     text-align: center;
