--- a/style.css
+++ b/style.css
@@ -175,10 +175,10 @@ a{
 
 #hero {
     min-height: 100vh;
-    background: url('/assets/Home12.png');
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.315), rgba(0, 0, 0, 0.281)), url('/assets/Home12.png');
     background-position: center;
     background-repeat: no-repeat;
-    background-size: 100% 100%;
+    background-size: cover;
     display: grid;
     place-content: center;
     text-align: center;
