--- a/style.css
+++ b/style.css
@@ -175,7 +175,7 @@ a{
 
 #hero {
     min-height: 100vh;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.315), rgba(0, 0, 0, 0.281)), url('/assets/Home12.png');
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.315), rgba(0, 0, 0, 0.281)), url('../assets/Home12.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
